--- a/treinodetamanhodeimagens.html
+++ b/treinodetamanhodeimagens.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Exercício de treino</h1>
     <p>Treino de tamanhos de imagens em um site HTML.</p>
+    <source media="(max-width: 600px)" srcset="600.png" type="image/png">
+    <source media="(max-width: 800.png)" srcset="800.png" type="image/png">
 </body>
 </html>
