--- a/treinodetamanhodeimagens.html
+++ b/treinodetamanhodeimagens.html
@@ -11,5 +11,7 @@
     <p>Treino de tamanhos de imagens em um site HTML.</p>
     <source media="(max-width: 600px)" srcset="600.png" type="image/png">
     <source media="(max-width: 800.png)" srcset="800.png" type="image/png">
+    <source media="(max-width: 1050px)" srcset="1000.png" type="image/png">
+    <img src="midias/imagens/1000.png" alt="imagem flexível">
 </body>
 </html>
