--- a/treinodetamanhodeimagens.html
+++ b/treinodetamanhodeimagens.html
@@ -10,7 +10,7 @@
     <h1>Exercício de treino</h1>
     <p>Treino de tamanhos de imagens em um site HTML.</p>
     <picture>
-    <source media="(max-width: 600px)" srcset="600px" type="image/png">
+    <source media="(max-width: 600px)" srcset="600.png" type="image/png">
     <source media="(max-width: 800px)" srcset="800.png" type="image/png">
     <source media="(max-width: 1050px)" srcset="1000.png" type="image/png">
     <img src="midias/imagens/1000.png" alt="imagem flexível">
